--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 html, body{
   margin: 0;
-  font-family: "Roboto","Oswald", Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
 }
 header{
   display:flex;
