--- a/style.css
+++ b/style.css
@@ -519,6 +519,11 @@ span.big{
   width:25%;
 
 }
+.news{
+    display:inline-block;
+    padding:20px 20px 0px 20px;
+    border-bottom:1px solid #ddd;
+}
 
 .Newsletter{
   display:flex;
@@ -832,7 +837,8 @@ form{
 
 .inline-block{
   margin-left:5px;
-  width:47%;
+
+  width:42%;
   display:inline-block;
 }
 .block{
@@ -853,11 +859,14 @@ form > div{
   margin-left:5px;
 }
 form > div > input{
-
-  border-block-end-style: hidden;
-  border-radius:0px;
+  border:none;
+  border-style: none;
   width:100%;
-  padding-top:10px;
+  border:1px solid #5f5c5c;
+  padding:10px 0px 10px;
+}
+.btn{
+  border:1px solid #5f5c5c;
 }
 .btn-log-in{
   color:white;
@@ -976,6 +985,10 @@ form > div > input{
     width:100%;
 
   }
+  .form-table > .table-wraper > .table1{
+    width:100%;
+
+  }
   .form-table > .table-wraper > .table2{
     width:100%;
 
@@ -1065,22 +1078,19 @@ li .val2 *{
   font-weight:600;
 
 }
-.table2{
-  padding-left:20%;
-}
+
 
 .table2 .data-wrapper{
-  background-color: #fff;
-  padding: 0 3%;
+  background-color: #f0f0e8;
 }
 .table2 .data-wrapper > ul{
-  width:60%;
+  width:100%;
 }
 .table2 > .data-wrapper > ul > li{
   display: flex;
   align-items: flex-start;
   font-size: small;
-  padding: 15px 0;
+  width:100%;
   border-bottom: 1px solid #ddd;
 }
 
@@ -1095,12 +1105,12 @@ li .val2 *{
   margin-left:20px;
 }
 .table2 > .data-wrapper >ul >li{
-  width: 40%;
+
   color: #999;
   font-weight: bold;
   text-transform: uppercase;
   font-size: smaller;
-  padding-left:10px;
+  
 }
 .table2 > .data-wrapper >ul >li .val2{
   width: 40%;
