--- a/style.css
+++ b/style.css
@@ -207,6 +207,9 @@ footer{
   background-color: #fff;
   width:100%;
 }
+.white-txt{
+  color:#fff;
+}
 .ico-circle{
     padding: 16px;
     color:#3f3f3f;
@@ -1348,6 +1351,157 @@ li .val2 *{
   border-bottom:1px solid #b4b3b3;
   width:75px;
 }
+.section-blue-head{
+  display:flex;
+  margin:0;
+  padding:0px 20%;
+  flex-direction:row;
+  align-content: space-between;
+}
+.section-blue-head >.head {
+  text-align:center;
+  width:30%;
+  position:relative;
+
+}
+.desc{
+  font-size:15px;
+}
+
+.section-blue-head > .head > .notch-up{
+  position:absolute;
+  display:none;
+  top:62px;
+  left:50%;
+  height:0;
+  width:0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 20px solid #fff;
+  
+}
+.section-blue-head > .head:hover .notch-up{
+  display:block;
+}
+.section-text{
+  display:flex;
+  flex-direction: column;
+  padding:30px 25% 100px 25%;
+  text-align:justify;
+}
+
+.bg-grey{
+  background-color: #f7f7f7;
+}
+.btn-wrapper{
+  margin: 20px 0;
+}
+.btn-wrapper input:focus, .btn-wrapper select:focus{
+  outline: none;
+}
+.btn-wrapper > div, .btn-wrapper select{
+  display: inline-block;
+  vertical-align: middle;
+  border: 1px solid #ededed;
+  background: transparent;
+}
+.btn-wrapper select{
+  padding: 10px 30px;
+  color: #999;
+}
+.btn-wrapper > div span{
+  padding: 10px 15px;
+  display: inline-block;
+  font-weight: 700;
+  border-left: 1px solid #ededed;
+  border-right: 1px solid #ededed;
+  cursor: pointer;
+  color: #999;
+}
+.btn-wrapper > div span:hover{
+  background-color: #48689b;
+  border-color: #48689b;
+  color: #fff;
+}
+.btn-wrapper input[type="number"]{
+  max-width: 30px;
+  padding-left: 10px;
+  border: 1px solid transparent;
+  background-color: transparent;
+  font-weight: 700;
+  color: #999;
+}
+
+.btn-wrapper .btn-bordered{
+  border: 2px solid #486888;
+}
+.btn-wrapper .btn{
+  padding: 10px 25px;
+  margin-right: 10px;
+}
+.btn-wrapper .btn-blue{
+  background-color: #486888;
+  color: #fff;
+  border: 2px solid #486888;
+}
+.btn-wrapper .btn-bordered:hover{
+  background-color: #486888;
+  color: #fff;
+  transition: all 600ms ease;
+}
+.btn-wrapper .btn-blue:hover{
+  background-color: #3c5874;
+  border-color: #3c5874;
+  transition: all 600ms ease;
+}
+.meter { 
+	height: 20px;  /* Can be anything */
+	position: relative;
+	background: #555;
+	-moz-border-radius: 25px;
+	-webkit-border-radius: 25px;
+	border-radius: 25px;
+	padding: 10px;
+	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+}
+.meter > span {
+  display: block;
+  height: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+ 
+ 
+}
+.blue-m > span {
+  background-color: #f1a165;
+  background-image: linear-gradient(to bottom,#000,#3c5874);
+}
+.meter > span:after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  background-image: linear-gradient(
+    -45deg, 
+    rgba(49, 98, 231, 0.2) 25%, 
+    transparent 25%, 
+    transparent 50%, 
+    rgba(49, 98, 231, 0.2) 25%,
+    rgba(49, 98, 231, 0.2) 25%, 
+    transparent 75%, 
+    transparent
+  );
+  z-index: 1;
+  background-size: 50px 50px;
+  animation: move 2s linear infinite;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  overflow: hidden;
+}
+
 *{
   font-family: 'RobotoSlab','Oswald';
 }
